# lasr-stealth-evals

./: .gitignore  .pre-commit-config.yaml  20250417_183200.json  20250417_183245.json  20250417_183252.json  Makefile  README.md  pyproject.toml  run.py  tanush.ipynb
data/: coding_tasks.json  complete_tasks.json  dataset.jsonl  email_assistant_dataset.json  julija.json  lit.jsonl  new_tasks.json  nik.json  no_generation_tasks.json  no_generation_templates.py  strategy.json  tanush.json  task.json  tasks.json  templates.py  tickets.json  updated_tasks.json
data/archive/: lit.jsonl  old_tasks3.json  tanush.json
data/misc/: inspect_example.json
logs_json/: sample.json
multi-agent-customer-support/: environment_simulator.py  prompts.py  protocol.json  ticket_generation.py
multi-agent-customer-support/data/: tickets.json
multi-agent-customer-support/multiagent/: agent.py  utils.py
multi-agent-customer-support/notebooks/: analysis.ipynb
multi-agent-customer-support/prompts/: agent_prompts.py
multi-agent-customer-support/results/: output_2.json
multi-agent-customer-support/scripts/: data_generator.py  env_simulator.py  ticket_generation.py
multi_agent_basic_demo/: create_tickets.py  prompts.py  scenario.py
multi_agent_basic_demo/results/: log_gpt_3_turbo.txt  log_gpt_4o.txt  log_o1.txt
multi_agent_basic_demo/tickets/: ticket_0.txt  ticket_1.txt  ticket_2.txt  ticket_3.txt  ticket_4.txt  ticket_5.txt  ticket_6.txt  ticket_7.txt  ticket_8.txt  ticket_9.txt
notebooks/: nik.py  tutorials.ipynb
scripts/: run.py
speedrun/: build_dataset.py  data.json  prompts.py  secretary_eval.py
src/lasr_stealth_evals/: __init__.py  email_assistant.py  example.py  main.py  prompt.py
src/lasr_stealth_evals/collusion/: agent.py  analysis.ipynb  analysis.py  config.py  example.py  generate_samples.py  inspect_metadata.py  new_task.py  no_generation_templates.py  prompts.py  sample 17.53.50.eval  sample.eval  scorer.py  strategy_loader.py  task.py  templates.py  util.py  validation.py  wandb_logger.py
src/lasr_stealth_evals/data/: train.json
src/lasr_stealth_evals/email_assistant/: email_assistant.py  email_assistant_scorer.py
src/lasr_stealth_evals/example/: agent.py  config.py  env.py  misc.py  prompt.yml  prompts.yml  state.py  task.py  (+2 more)
src/pump_and_dump/: agent.py  channels.py  env.py  logger.py  msg.py  task.py
tests/: test_generate_validation_set.py  test_validation.py
tests/collusion/: test_generate_samples.py  test_task_formatting.py
(+41 files in other folders)
