[project]
name = "lasr-stealth-evals"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Nikita Ostrovsky", email = "nik.ostro@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "inspect-ai>=0.3.66",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "pre-commit>=4.1.0",
    "python-dotenv>=1.0.1",
]

[tool.ruff]
line-length = 88

[tool.pyright]
reportMissingParameterType = true
reportUnknownParameterType = true
